---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Setup the hidden blueprintable entity
    - Prevent the combinator from being placed somewhere without belts
    - Run on_tick conditionally
    - Improve on_tick readability
    - Disable the checkbox, label & button whilst not reading all belts
    - Cleanup nested gui access
    - Create and destroy the combinator based on hold (all belts)
    - Ensure the combinator doesn't exist as a ghost
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 11. 12
  Info:
    - Align the thumbnail B further from the right edge
    - Start gui off disabled
    - Check for hold mode when having a belt (ghost) open
    - Add entity_is_transport_belt(entity)
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 12
  Info:
    - Setup the initial gui frame
    - Add circuit selector with caption
    - Add a checkbox
    - Replicate photoshopped thumbnail
    - Align the thumbnail B further from the right edge
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 11
  Info:
    - Initial commit